# kizhi

./: CMakeLists.txt  README.md
include/kizhi/: Log.h
src/: Log.cpp
